Layout fix
Fixed layout issue where input buttons were not inline with their labels

--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,9 @@ button:hover{
 
 }
 
+#newsletter-form input{
+    margin-right: 5px;
+}
 
 .intro-text{
     padding: 20px;
